# ALCOMD3

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-NOTES.md  README.md  alcomd3.config.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01_gui_bug-report.yml  02_gui_feature_request.yml
.github/scripts/: installer-smoke.ps1  posix-package-smoke.mjs  resolve-windows-migration-installer.ps1  verify-installer-zip.ps1
.github/workflows/: ci.yml  dependency-review.yml  full-chain.yml  release-draft.yml  release-updater.yml
CONTRIBUTING/: CONTRIBUTING.ja.md  CONTRIBUTING.zh-CN.md
README/: README.ja.md  README.zh-CN.md  README.zh-TW.md
alcomd3-app-paths/: Cargo.toml
alcomd3-app-paths/src/: lib.rs
alcomd3-mcp/: Cargo.toml
alcomd3-mcp-protocol/: Cargo.toml
alcomd3-mcp-protocol/src/: lib.rs
alcomd3-mcp/src/: main.rs
alcomd3-mcp/tests/: lifecycle.rs
docs/: ALCOMD3_UPDATER.md  MAINTENANCE.md  README.md  RELEASE.md  TESTING.md  mcp.md  repository-list-file-format.md
docs/ALCOMD3_UPDATER/: ALCOMD3_UPDATER.ja.md  ALCOMD3_UPDATER.zh-CN.md
docs/MAINTENANCE/: MAINTENANCE.ja.md  MAINTENANCE.zh-CN.md
docs/README/: README.ja.md  README.zh-CN.md
docs/RELEASE/: RELEASE.ja.md  RELEASE.zh-CN.md
docs/TESTING/: TESTING.zh-CN.md
docs/mcp/: mcp.ja.md  mcp.zh-CN.md  mcp.zh-TW.md
docs/release-assets/: ALCOMD3-BOOTH-PSD.psd  README.md
docs/repository-list-file-format/: repository-list-file-format.ja.md  repository-list-file-format.zh-CN.md
docs/skills/: README.md
release-notes/: ALCOMD3_2.1.0.md  ALCOMD3_2.1.0.updater-notes.json  ALCOMD3_2.1.1.md  ALCOMD3_2.1.1.updater-notes.json  ALCOMD3_2.1.2-beta.1.md  ALCOMD3_2.1.2-beta.1.updater-notes.json  ALCOMD3_2.1.2.md  ALCOMD3_2.1.2.updater-notes.json  ALCOMD3_2.1.3-beta.1.md  ALCOMD3_2.1.3-beta.1.updater-notes.json  ALCOMD3_2.1.3-beta.2.md  ALCOMD3_2.1.3-beta.2.updater-notes.json  ALCOMD3_2.2.0-beta.1.md  ALCOMD3_2.2.0-beta.1.updater-notes.json  ALCOMD3_2.2.0-beta.2.md  ALCOMD3_2.2.0-beta.2.updater-notes.json  ALCOMD3_2.2.0-beta.3.md  ALCOMD3_2.2.0-beta.3.updater-notes.json  ALCOMD3_2.2.0-beta.4.md  ALCOMD3_2.2.0-beta.4.updater-notes.json  ALCOMD3_2.2.0-beta.5.md  ALCOMD3_2.2.0-beta.5.updater-notes.json  ALCOMD3_2.2.0-beta.6.md  ALCOMD3_2.2.0-beta.6.updater-notes.json  ALCOMD3_3.0.0-beta.1.md  ALCOMD3_3.0.0-beta.1.updater-notes.json  ALCOMD3_3.0.0-beta.2.md  ALCOMD3_3.0.0-beta.2.updater-notes.json  ALCOMD3_3.0.0.md  ALCOMD3_3.0.0.updater-notes.json
scripts/: sync-contributors.mjs
vrc-get/: Cargo.toml
vrc-get-gui/: .gitignore  CONTRIBUTING.md  Cargo.toml  Info.plist  README.md  THIRD-PARTY.md  Tauri.toml  about.toml  biome.jsonc  index.html  install-vcc-protocol.bat  package-lock.json  package.json  tsconfig.json  vitest.config.ts
vrc-get-gui/CONTRIBUTING/: CONTRIBUTING.ja.md  CONTRIBUTING.zh-CN.md
vrc-get-gui/app/: -error.tsx  globals.css
vrc-get-gui/bundle/: alcomd3.desktop  deb-control  windows-setup.iss
vrc-get-gui/components/: BackupProjectDialog.tsx  (+9 more)
vrc-get-vpm/: Cargo.toml  README.md
website/: .gitignore  AGENTS.md  astro.config.mjs  package-lock.json  package.json  playwright.config.mjs
xtask/: Cargo.toml
xtask/src/: alcom_updater_json.rs  alcomd3_config.rs  build_alcom.rs  bundle_alcom.rs  generate_alcom_updater_key.rs  main.rs  release_assemble.rs  release_assets.rs  release_build.rs  release_common.rs  release_preflight.rs  release_prepare.rs  release_publish.rs  release_updater.rs  release_validate.rs  sign_alcom_app.rs  sign_alcom_updater.rs  utils.rs  verify_alcom_updater_json.rs  verify_alcom_updater_key.rs
xtask/src/bundle_alcom/: app.rs  appimage.rs  deb.rs  dmg.rs  linux.rs  rpm.rs  setup_exe.rs
xtask/src/utils/: cargo.rs  dpkg.rs  ds_store.rs
xtask/tests/: alcomd3_identity.rs
(+172 files in other folders)
