[package]
name = "alcomd3-mcp-protocol"
version.workspace = true
description = "Shared local IPC protocol for ALCOMD3 MCP bridge"

homepage.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
alcomd3-app-paths = { path = "../alcomd3-app-paths" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
