[package]
name = "alcomd3-mcp"
version.workspace = true
description = "MCP stdio bridge for ALCOMD3"

homepage.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[[bin]]
name = "alcomd3-mcp"
path = "src/main.rs"

[dependencies]
alcomd3-mcp-protocol = { path = "../alcomd3-mcp-protocol" }
anyhow = "1"
rmcp = { version = "2.2.0", features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }
