[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
cargo_metadata = "0.23.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
itertools = "0.15.0"
object = { version = "0.39.1", features = ["read_core", "elf", "macho", "pe"], default-features = false }
chrono = { version = "0.4.44", features = ["serde", "now"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
indexmap = { version = "2.13.0", features = ["serde"] }
serde_json = "1.0.150"
semver = "1.0.27"
toml_edit = "0.25.12"
ureq = { version = "3.3.0", features = ["gzip", "rustls"], default-features = false }
flate2 = "1.1.1"
tar = { version = "0.4.46", features = [], default-features = false }
plist = "1.9.0"
rpm = { version = "0.25.1", default-features = false, features = ["gzip-compression", "payload"] }
ar = "0.9.0"
fs_extra = "1.3.0"
base64 = "0.22.1"
minisign = "0.9.1"
sha2 = "0.10.9"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2"] }
